# Humanoid_Robot_Client_SDK

./: .gitignore  CMakeLists.txt  DESIGN_DOCUMENT.md  README.md
docs/: requirements_specification.md
example/: CMakeLists.txt  interfaces_client_example.cpp  navgation_client_example.cpp
include/robot/client/: client_callback_server.h  client_stud.h  interfaces_client.h
include/robot/common/: errorCode.h  error_code.h  json_convert_util.hpp  marco.h  status.h  success_condition.h
include/robot/modules/: control_api.h  navigation_api.h  perception_api.h
source/: CMakeLists.txt
source/robot/: CMakeLists.txt
source/robot/client/: CMakeLists.txt  client_base.cpp  client_callback_server.cpp  client_stud.cpp  interfaces_client.cpp
source/robot/common/: CMakeLists.txt  status.cpp  success_condition.cpp
source/robot/modules/: CMakeLists.txt  control_api.cpp  navigation_api.cpp  perception_api.cpp
source/robot/v1/: CMakeLists.txt
